k8s/mealie/mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-svc
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mealie

#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: mealie-data
#  namespace: mealie
#spec:
#  volumeName: mealie-data
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 2Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.3.0
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
  serviceName: mealie-svc
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
  annotations:
    cert-manager.io/issuer: main-issuer
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  rules:
    - host: "recipes.bitforger.dev"
      http:
        paths:
          - backend:
              service:
                name: mealie-svc
                port:
                  number: 9000
            pathType: Prefix
            path: "/"
  tls:
    - hosts:
        - recipes.bitforger.dev
      secretName: mealie-tls
